css styles added

--- a/Vistas/Vistas.csproj
+++ b/Vistas/Vistas.csproj
@@ -67,6 +67,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="abmlPaciente.aspx" />
+    <Content Include="administrador.aspx" />
     <Content Include="Admin\pacientes\cargar.aspx" />
     <Content Include="Admin\pacientes\editar.aspx" />
     <Content Include="Admin\pacientes\eliminar.aspx" />
@@ -77,13 +79,30 @@
     <Content Include="Admin\medicos\mostrar.aspx" />
     <Content Include="Admin\inicio.aspx" />
     <Content Include="Admin\turnos\asignar_turno.aspx" />
+    <Content Include="amblMedicos.aspx" />
+    <Content Include="estilos.css" />
     <Content Include="login.aspx" />
+    <Content Include="medico.aspx" />
     <Content Include="Medicos\inicio.aspx" />
     <Content Include="Medicos\perfil.aspx" />
     <Content Include="Medicos\turnos.aspx" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="abmlPaciente.aspx.cs">
+      <DependentUpon>abmlPaciente.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="abmlPaciente.aspx.designer.cs">
+      <DependentUpon>abmlPaciente.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="administrador.aspx.cs">
+      <DependentUpon>administrador.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="administrador.aspx.designer.cs">
+      <DependentUpon>administrador.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Admin\pacientes\cargar.aspx.cs">
       <DependentUpon>cargar.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -154,12 +173,26 @@
     <Compile Include="Admin\turnos\asignar_turno.aspx.designer.cs">
       <DependentUpon>asignar_turno.aspx</DependentUpon>
     </Compile>
+    <Compile Include="amblMedicos.aspx.cs">
+      <DependentUpon>amblMedicos.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="amblMedicos.aspx.designer.cs">
+      <DependentUpon>amblMedicos.aspx</DependentUpon>
+    </Compile>
     <Compile Include="login.aspx.cs">
       <DependentUpon>login.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
     <Compile Include="login.aspx.designer.cs">
       <DependentUpon>login.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="medico.aspx.cs">
+      <DependentUpon>medico.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="medico.aspx.designer.cs">
+      <DependentUpon>medico.aspx</DependentUpon>
     </Compile>
     <Compile Include="Medicos\inicio.aspx.cs">
       <DependentUpon>inicio.aspx</DependentUpon>
