--- a/Vistas/Vistas.csproj
+++ b/Vistas/Vistas.csproj
@@ -74,6 +74,7 @@
     <Content Include="Admin\medicos\cargarMedicos.aspx" />
     <Content Include="Admin\turnos\asignar_turno.aspx" />
     <Content Include="estilos.css" />
+    <Content Include="Admin_style.css" />
     <Content Include="Imagenes\logo.png" />
     <Content Include="login.aspx" />
     <Content Include="Medicos\turnos.aspx" />
