--- a/Vistas/Vistas.csproj
+++ b/Vistas/Vistas.csproj
@@ -73,12 +73,12 @@
     <Content Include="Admin\pacientes\cargarPaciente.aspx" />
     <Content Include="Admin\medicos\cargarMedicos.aspx" />
     <Content Include="Admin\turnos\asignar_turno.aspx" />
-    <Content Include="estilos.css" />
     <Content Include="Admin_style.css" />
     <Content Include="Imagenes\logo.png" />
     <Content Include="login.aspx" />
+    <Content Include="login_style.css" />
+    <Content Include="Medicos\medicos_style.css" />
     <Content Include="Medicos\turnos.aspx" />
-    <Content Include="styles.css" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
