add doctors and patients finished

--- a/Vistas/Web.config
+++ b/Vistas/Web.config
@@ -7,6 +7,8 @@
   <connectionStrings>
     <add name="BDCLINICA_TPINTEGRADORConnectionString" connectionString="Data Source=LOLO\SQLEXPRESS;Initial Catalog=BDCLINICA_TPINTEGRADOR;Integrated Security=True;TrustServerCertificate=True"
       providerName="System.Data.SqlClient" />
+    <add name="BDCLINICA_TPINTEGRADORConnectionString2" connectionString="Data Source=DESKTOP-GUU4RQA\SQLEXPRESS;Initial Catalog=BDCLINICA_TPINTEGRADOR;Integrated Security=True;TrustServerCertificate=True"
+      providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.7.2" />
