--- a/Entidades/Entidades.csproj
+++ b/Entidades/Entidades.csproj
@@ -44,6 +44,7 @@
     <Compile Include="Medicos.cs" />
     <Compile Include="Pacientes.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Turnos.cs" />
     <Compile Include="Usuario.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
