--- a/Negocio/Negocio.csproj
+++ b/Negocio/Negocio.csproj
@@ -41,8 +41,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Manager\UserDoctor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="UserManager.cs" />
+    <Compile Include="Manager\UserManager.cs" />
     <Compile Include="Validar.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -55,5 +56,6 @@
       <Name>Entidades</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
