--- a/Entidades/Entidades.csproj
+++ b/Entidades/Entidades.csproj
@@ -46,6 +46,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Turnos.cs" />
     <Compile Include="Usuario.cs" />
+    <Compile Include="WorkingHours.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
