Doctor available to change state and observation of an appointment

--- a/Vistas/Vistas.csproj
+++ b/Vistas/Vistas.csproj
@@ -78,6 +78,7 @@
     <Content Include="Admin\pacientes\cargarPaciente.aspx" />
     <Content Include="Admin\medicos\cargarMedicos.aspx" />
     <Content Include="Admin\turnos\asignar_turno.aspx" />
+    <Content Include="grid_view_style.css" />
     <Content Include="Imagenes\logo.png" />
     <Content Include="login.aspx" />
     <Content Include="login_style.css" />
