--- a/Negocio/Negocio.csproj
+++ b/Negocio/Negocio.csproj
@@ -41,9 +41,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Manager\UserDoctor.cs" />
+    <Compile Include="Doctor\DoctorAppointmentsManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Manager\UserManager.cs" />
+    <Compile Include="Admin\AdminDoctorManager.cs" />
     <Compile Include="Validar.cs" />
   </ItemGroup>
   <ItemGroup>
