--- a/Entidades/Entidades.csproj
+++ b/Entidades/Entidades.csproj
@@ -41,12 +41,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Admin.cs" />
+    <Compile Include="City.cs" />
     <Compile Include="Medicos.cs" />
     <Compile Include="Pacientes.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Speciality.cs" />
+    <Compile Include="State.cs" />
     <Compile Include="Turnos.cs" />
     <Compile Include="Usuario.cs" />
-    <Compile Include="WorkingHours.cs" />
+    <Compile Include="DoctorSchedule.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
