--- a/Vistas/Vistas.csproj
+++ b/Vistas/Vistas.csproj
@@ -162,6 +162,10 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Datos\Datos.csproj">
+      <Project>{5554f935-a991-49fe-8323-b896df2a9c19}</Project>
+      <Name>Datos</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Entidades\Entidades.csproj">
       <Project>{b23ca4e5-87ec-41da-8d72-3c3c6e5d3e2d}</Project>
       <Name>Entidades</Name>
