--- a/Negocio/Negocio.csproj
+++ b/Negocio/Negocio.csproj
@@ -49,6 +49,7 @@
     <Compile Include="Admin\AdminDoctorManager.cs" />
     <Compile Include="Shared\AuthManager.cs" />
     <Compile Include="Shared\GetUbicationManager.cs" />
+    <Compile Include="Shared\UserManager.cs" />
     <Compile Include="Validar.cs" />
   </ItemGroup>
   <ItemGroup>
